--- a/style.css
+++ b/style.css
@@ -976,7 +976,7 @@ textarea {
 	box-sizing: border-box;
 }
 body {
-   	font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+   	font-size: calc(14px + (24 - 14) * ((100vw - 300px) / (1600 - 300)));
     line-height: 1.5;
 	/* overflow-wrap: break-word; */
 	 word-break: break-word;
@@ -1015,12 +1015,13 @@ button {
     padding: 0.75rem 1.5rem;
 }
 header.site-header{
-	
+	max-height: 90vh;
 }
 .hero-part{
 	position: relative;
 	width: 100%;
 	min-height: 40vw;
+	/* max-height: 60vh; */
 	background-image:
 		linear-gradient(
 			to right, 
@@ -1030,6 +1031,22 @@ header.site-header{
 			
     );
 }
+/* .hero-part::after{
+	content: " ";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-image:
+		linear-gradient(
+			to right, 
+			black, 
+			#252525b0, 
+			rgb(0, 0, 0)
+			
+    );
+} */
 header.site-header .site-branding{
 	/* position: relative; */
 	/* display: flex;
@@ -1064,7 +1081,7 @@ header.site-header .site-branding{
 .site-branding .site-logo a img{
   display: block;
 	width: 100%;
-	height: 100%;
+	height:100%;
 	object-fit:contain;
 	object-position: center;
 	border-radius: 50%;
@@ -1080,6 +1097,7 @@ header.site-header .site-branding{
 	object-position: center;
 	opacity: 25%;
 }
+
 .site-branding .site-title{
 	position: absolute;
 	top: 50%;
@@ -1184,13 +1202,14 @@ aside.widget-area .widget p a{
 	border: 1px solid #d7d7d7;
 	padding: .25rem .5rem;
 
-	font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1600 - 300))) !important ;
+	font-size: calc(10px + (20 - 10) * ((100vw - 300px) / (1600 - 300))) !important ;
 }
 aside.widget-area .widget img{
 	width: 100%;
 }
 main.site-main{
 	width: 100%;
+	min-width: 0;/*overflow control*/
 }
 footer.site-footer{
 	width: 100%;
@@ -1228,7 +1247,7 @@ form.wp-block-search .wp-block-search__inside-wrapper button[type="submit"]{
 div.entry-meta,
 footer.site-footer
 {
-	font-size: calc(12px + (24 - 12) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(12px + (22 - 12) * ((100vw - 300px) / (1600 - 300)));
 
 }
 div.entry-meta{
@@ -1237,12 +1256,12 @@ div.entry-meta{
 .wp-block-latest-posts__post-date,
 .site-description,
 label{
-	font-size: calc(10px + (22 - 10) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(10px + (20 - 10) * ((100vw - 300px) / (1600 - 300)));
 }
 .widget h2{
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 800;
-	font-size: calc(16px + (28 - 16) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(16px + (26 - 16) * ((100vw - 300px) / (1600 - 300)));
 }
 .article-box ,
 .widget {
@@ -1275,9 +1294,14 @@ text-overflow:ellipsis;
 		padding-top:110px ;
 	}
 	.site-branding .hero-img{
-		height: 100%;
+	
 
-		object-fit:unset;
+		/* object-fit:contain; */
+		object-position: center;
+	}
+	.hero-part{
+		min-height: 30vh;
+		height:60vh ;
 	}
 }
 @media (min-width:600px) {
